--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -10,7 +10,7 @@
   <div class="admin-button">
     <a href="/admin" class="sidebar-button" id="home-page">
       <i class="fi fi-br-home"></i>
-      <p>Trang Chủ</p>
+      <p>Trang chủ</p>
     </a>
     <a href="/admin/all-orders" class="sidebar-button" id="orders">
       <i class="fi fi-rr-piggy-bank"></i>
@@ -32,7 +32,7 @@
       <i class="fi fi-br-circle-user"></i>
       <p>Cập Nhật Thông Tin Cá Nhân</p>
     </a>
-    <a href="/home" class="sidebar-button" id="log-out">
+    <a href="/authentication/sign-in" class="sidebar-button" id="log-out">
       <i class="fi fi-br-exit"></i>
       <p>Đăng Xuất</p>
     </a>
