--- a/src/public/css/adminAllOrders.css
+++ b/src/public/css/adminAllOrders.css
@@ -1,7 +1,7 @@
 .admin-all-orders-container {
   overflow-x: auto;
 
-  .board-sidebar {
+  .board-title {
     width: 100%;
     display: flex;
     align-items: center;
@@ -17,28 +17,33 @@
     }
   }
 
-  .table {
-    table, th, td {
-      text-align: center;
-    }
+  .filter {
+    background-color: #FFDFDF;
+    padding: 5px;
+  }
 
-    table {
-      width: 100%;
-      border-spacing: 0px 10px;
-      padding: 0px 10px;
-    }
+  table, th, td {
+    text-align: center;
+  }
 
-    th {
-      background-color:#D1A6A6;
-      height: 50px;
-      a { text-decoration: none }
-      i { color: black }
-    }
+  table {
+    width: 100%;
+    border-spacing: 0px 10px;
+    padding: 0px 10px;
+  }
 
+  thead {
+    background-color:#D1A6A6;
+    height: 50px;
+    a { text-decoration: none }
+    i { color: black }
+  }
+
+  tbody {
     tr {
       background-color:#F0F0F0;
       height: 50px;
-
+  
       td:first-child {
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
@@ -47,13 +52,13 @@
         border-top-right-radius: 10px;
         border-bottom-right-radius: 10px;
       }
-    }
-    
-    tr:hover {
-      filter: brightness(85%);
-    }
 
-    a { text-decoration: none; color: black; font-weight: bolder;}
+      a { text-decoration: none; color: black; font-weight: bold; }
+    }
+  
+    tr:hover {
+      filter: brightness(80%);
+    }
   }
 
   .total {
@@ -74,11 +79,22 @@
     }
   }
 
-  /* Change styles for cancel button and delete button on extra small screens */
-  @media screen and (max-width: 300px) {
-    .cancelbtn, .deletebtn {
-      width: 100%;
+  .pagination {
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    gap: 10px;
+  
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid black;
+      border-radius: 5px;
+      text-decoration: none;
+      width: 20px;
+      color: black;
     }
-  }
+  }  
 }
 
