--- a/src/public/css/adminAllProducts.css
+++ b/src/public/css/adminAllProducts.css
@@ -23,7 +23,7 @@
     padding: 5px;
   }
 
-  .board-sidebar {
+  .board-title {
     width: 100%;
     display: flex;
     align-items: center;
@@ -39,7 +39,7 @@
     }
   }
 
-  table, th, td {
+  table, td {
     text-align: center;
   }
 
@@ -49,35 +49,37 @@
     padding: 0px 10px;
   }
 
-  th {
+  thead {
     background-color:#D1A6A6;
     height: 50px;
     a { text-decoration: none }
     i { color: black }
   }
 
-  tr {
-    background-color:#F0F0F0;
-    height: 50px;
-
-    td:first-child {
-      border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px;
+  tbody {
+    tr {
+      background-color:#F0F0F0;
+      height: 50px;
+  
+      td:first-child {
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+      }
+      td:last-child {
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+      }
     }
-    td:last-child {
-      border-top-right-radius: 10px;
-      border-bottom-right-radius: 10px;
+  
+    tr:hover {
+      filter: brightness(80%);
     }
-  }
 
-  tr:hover {
-    background-color: #D1A6A6;
-  }
-
-  img {
-    border-radius: 50%;
-    width: 40px;
-    aspect-ratio: 1/1;
+    img {
+      border-radius: 10px;
+      width: 40px;
+      aspect-ratio: 1/1;
+    }
   }
 
   /* Set a style for all buttons */
@@ -93,9 +95,7 @@
 
   
   button:hover {
-    background-color: #D1A6A6;
-    color: white;
-    border: 1px solid white ;
+    filter: brightness(80%);
   }
 
   /* Add a color to the cancel button */
