--- a/src/public/css/adminHome.css
+++ b/src/public/css/adminHome.css
@@ -4,45 +4,67 @@
     align-items: center;
     justify-content: center;
     text-transform: capitalize;
+    margin-block-start: 0;
+    margin-block-end: 0;
   }
 
   .info-table {
+    gap: 10px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+
     table {
       width: 100%;
       border-spacing: 0px 10px;
+      padding: 0px 10px;
+    }
   
-      thead {
-        background-color: #D1A6A6;
+    thead {
+      text-align: center;
+      background-color:#D1A6A6;
+      height: 50px;
+      font-weight: bolder;
+    }
+  
+    tbody {
+      tr {
+        background-color:#F0F0F0;
         height: 50px;
-        font-weight: bolder;
-        text-align: center;
-      }
-  
-      tbody {
+
         td {
-          height: 50px;
-          border-bottom: 1px solid black;
-          padding: 5px 0;
-  
-          label {
-            padding: 5px;
-            border-radius: 5px;
-            cursor: pointer;
-          }
-  
-          input {
-            display: none;
-          }
+          padding: 10px;
+          text-align: center;
+          a { text-decoration: none; color: black;}
         }
-  
+    
+        td:first-child {
+          border-top-left-radius: 10px;
+          border-bottom-left-radius: 10px;
+        }
+        td:last-child {
+          border-top-right-radius: 10px;
+          border-bottom-right-radius: 10px;
+        }
+
         td:first-child {
           width: 50%;
         }
   
         td:nth-child(2) {
           width: 30%;
+          color: #D1A6A6;
+          font-weight: bolder;
         }
       }
+    
+      tr:hover {
+        filter: brightness(80%);
+      }
     }
+  }
+
+  .info-table > div {
+    background-color: white;
+    border-radius: 10px;
   }
 }
