--- a/src/public/css/adminTrashProducts.css
+++ b/src/public/css/adminTrashProducts.css
@@ -22,28 +22,46 @@
   }
 
   table, th, td {
-    border-bottom: 1px solid #ddd;
-    border-collapse: collapse;
-    padding: 5px;
     text-align: center;
   }
 
-  th {
-    background-color: #D1A6A6;
+  table {
+    width: 100%;
+    border-spacing: 0px 10px;
+    padding: 0px 10px;
+  }
+
+  thead {
+    background-color:#D1A6A6;
     height: 50px;
     a { text-decoration: none }
     i { color: black }
-    gap: 5px;
   }
 
-  tr:nth-child(even){background-color: #f2f2f2}
-  tr:nth-child(odd){background-color: white}
-  tr:hover {background-color: #D1A6A6;}
+  tbody {
+    tr {
+      background-color:#F0F0F0;
+      height: 50px;
+  
+      td:first-child {
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+      }
+      td:last-child {
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+      }
+    }
+  
+    tr:hover {
+      filter: brightness(80%);
+    }
 
-  img {
-    border-radius: 50%;
-    width: 40px;
-    aspect-ratio: 1/1;
+    img {
+      border-radius: 10px;
+      width: 40px;
+      aspect-ratio: 1/1;
+    }
   }
 
   /* Set a style for all buttons */
@@ -57,10 +75,9 @@
     cursor: pointer;
   };
 
+  
   button:hover {
-    background-color: #D1A6A6;
-    color: white;
-    border: 1px solid white ;
+    filter: brightness(80%);
   }
 
 /* Add a color to the cancel button */
