--- a/src/resource/views/admin/allOrders.hbs
+++ b/src/resource/views/admin/allOrders.hbs
@@ -1,57 +1,106 @@
 <div class="admin-all-orders-container">  
-  <div class="board-sidebar">
-    <p>Tổng Đơn Hàng: {{totalOrders}}</p>
+  <div class="board-title">
+    <p>Tổng Đơn Hàng: {{orderLength}}</p>
   </div>
+
+  <select class="filter">
+    <option value="">Lọc đơn hàng</option>
+    <option value="preparing">Đang xử lý</option>
+    <option value="delivering">Đang giao</option>
+    <option value="done">Đã hoàn thành</option>
+    <option value="">Toàn bộ</option>
+  </select>
 
   <div class="table">
     <table style="width:100%">
-      <tr>
-        <th>
-          ID
-        </th>
-        <th>
-          Mã Đơn Hàng
-        </th>
-        <th>
-          Tên Khách Hàng
-        </th>
-        <th>
-          Tổng Số Tiền
-        </th>
-        <th>
-          Ngày Đặt Hàng
-        </th>
-        <th>
-          Tình Trạng
-        </th>
-        <th>
-        </th>
-      </tr>
-      {{#each order}}
-      <tr>
-        <td>
-          {{addIndex @index 1}}
-        </td>
-        <td>
-          {{this._id}}
-        </td>
-        <td>
-          {{this.customerInfo.name}}
-        </td>
-        <td>
-          {{this.totalProductPrice}}
-        </td>
-        <td>
-          {{this.createdAt}}
-        </td>
-        <td>
-          {{this.status}}
-        </td>
-        <td>
-          <a href="/admin/all-orders/{{this._id}}">Chi Tiết</a>
-        </td>
-      </tr>
-      {{/each}}
+      <thead>
+        <tr>
+          <td>
+            ID
+          </td>
+          <td>
+            Mã Đơn Hàng
+          </td>
+          <td>
+            Tên Khách Hàng
+          </td>
+          <td>
+            Tổng Số Tiền
+          </td>
+          <td>
+            Ngày Đặt Hàng
+          </td>
+          <td>
+            Tình Trạng
+          </td>
+          <td>
+          </td>
+        </tr>
+      </thead>
+
+      <tbody>
+        {{#each newOrder}}
+        <tr>
+          <td>
+            {{addIndex @index 1}}
+          </td>
+          <td>
+            {{this._id}}
+          </td>
+          <td>
+            {{this.customerInfo.name}}
+          </td>
+          <td>
+            {{this.totalProductPrice}}
+          </td>
+          <td>
+            {{this.createdAt}}
+          </td>
+          <td>
+            {{this.status}}
+          </td>
+          <td>
+            <a href="/admin/all-orders/{{this._id}}">Chi Tiết</a>
+          </td>
+        </tr>
+        {{/each}}
+      </tbody>
     </table>
   </div>
+
+  <span class="pagination">
+  </span>
 </div>
+
+<script>
+  // pagination 
+  var pagination = document.querySelector('span.pagination')
+  var productLength = `{{orderLength}}`
+  var currentPage = 1
+
+  // díplay all pages tag
+  for (let i = 0; i < productLength; i += 10) {
+    var newPage = document.createElement('a')
+    newPage.setAttribute('href', `/admin/all-orders?page=${currentPage}&type={{orderType}}`)
+    newPage.innerText = `${currentPage}`
+    pagination.appendChild(newPage)
+    currentPage++
+  }
+
+  // Style the current selected page
+  var allPagesTag = pagination.querySelectorAll('a')
+  for (let i = 0; i < allPagesTag.length; ++i) {
+    if (allPagesTag[i].innerText === `{{currentPage}}`) {
+      allPagesTag[i].style.borderColor = '#D1A6A6'
+      allPagesTag[i].style.backgroundColor = '#D1A6A6'
+      allPagesTag[i].style.color = 'white'
+      allPagesTag[i].style.width = '25px'
+      allPagesTag[i].style.height = '25px'
+    }
+  }
+
+  let selectButton = document.querySelector('select')
+  selectButton.onchange = function () {
+    location = `/admin/all-orders?page={{currentPage}}&type=${this.value}`
+  }
+</script>
