--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -1,6 +1,5 @@
 <div class="admin-home-container">
   <h1></h1>
-  <h2>Bảng thống kê</h2>
 
   <div class="info-table">  
     <div class="order-info">
@@ -21,17 +20,17 @@
           <tr>
             <td>Đơn hàng đang xử lý</td>
             <td>{{preparingOrders}}</td>
-            <td><a href="">Chi tiết</a></td>
+            <td><a href="/admin/all-orders/?page=1&type=preparing">Chi tiết</a></td>
           </tr>
           <tr>
             <td>Đơn hàng đang giao</td>
             <td>{{deliveringOrders}}</td>
-            <td><a href="">Chi tiết</a></td>
+            <td><a href="/admin/all-orders/?page=1&type=delivering">Chi tiết</a></td>
           </tr>
           <tr>
             <td>Đơn hàng đã hoàn thành</td>
             <td>{{doneOrders}}</td>
-            <td><a href="">Chi tiết</a></td>
+            <td><a href="/admin/all-orders/?page=1&type=done">Chi tiết</a></td>
           </tr>
         </tbody>
       </table>
@@ -60,17 +59,17 @@
           <tr>
             <td>Sản phẩm Skincare</td>
             <td>{{allSkincareProducts}}</td>
-            <td><a href="">Chi tiết</a></td>
+            <td><a href="/admin/all-products/?page=1&type=skincare">Chi tiết</a></td>
           </tr>
           <tr>
             <td>Sản phẩm Makeup</td>
             <td>{{allMakeupProducts}}</td>
-            <td><a href="">Chi tiết</a></td>
+            <td><a href="/admin/all-products/?page=1&type=makeup">Chi tiết</a></td>
           </tr>
           <tr>
             <td>Sản phẩm đã xoá</td>
             <td></td>
-            <td><a href="">Chi tiết</a></td>
+            <td><a href="/admin/trash">Chi tiết</a></td>
           </tr>
         </tbody>
       </table>
@@ -101,11 +100,6 @@
             <td></td>
             <td><a href="">Chi tiết</a></td>
           </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td><a href="">Chi tiết</a></td>
-          </tr>
         </tbody>
       </table>
     </div>
@@ -116,6 +110,6 @@
   var greetingLine = document.querySelector('h1')
   var date = new Date()
   var dateNow = date.getDate() + '/' + (date.getMonth()+1) + '/' + date.getFullYear()
-  greetingLine.innerText = `Cập nhật thông tin đến ngày ${dateNow}`
+  greetingLine.innerText = `Doanh số bán hàng đến ngày ${dateNow}`
 
 </script>
