--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -74,7 +74,7 @@ function isRequiredString(selector) {
   return {
     selector: selector,
     test: function (value) {
-      return value.trim() ? undefined : 'Quên Chưa Nhập Kìa =((('
+      return value.trim() ? undefined : 'Chưa nhập mật khẩu'
     }
   }
 }
@@ -85,7 +85,7 @@ function isEmail(selector) {
     selector: selector,
     test: function (value) {
       var regex = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/
-      return regex.test(value) ? undefined : 'Nhập Đúng Email Vô =((('
+      return regex.test(value) ? undefined : 'Email nhập chưa đúng'
     }
   }
 }
