--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -6,22 +6,24 @@
         Giỏ Hàng 
       </p>
 
-      <table>
-        <thead>
-          <tr>
-            <td style="width: 15%;"></td>
-            <td style="width: 50%;">Sản Phẩm</td>
-            <td style="width: 10%;">Đơn Giá</td>
-            <td style="width: 10%;">Số Lượng</td>
-            <td style="width: 10%;">Tổng Tiền</td>
-            <td style="width: 5%;"></td>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-        <tfoot>
-        </tfoot>
-      </table>
+      <div style="overflow-x: auto;">
+        <table>
+          <thead>
+            <tr>
+              <td style="width: 15%;"></td>
+              <td style="width: 50%;" >Sản Phẩm</td>
+              <td style="width: 10%;">Đơn Giá</td>
+              <td style="width: 10%;">Số Lượng</td>
+              <td style="width: 10%;">Tổng Tiền</td>
+              <td style="width: 5%;"></td>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+          <tfoot>
+          </tfoot>
+        </table>
+      </div>
     </div>
 
     <div class="contact-info">
