--- a/src/resource/views/users/introduce.hbs
+++ b/src/resource/views/users/introduce.hbs
@@ -28,10 +28,13 @@
       <image src="../../../img/logo.jpg"/>
       <span>
         <ul>Hãy liên hệ với mình qua:</ul>
-          <li> Website: https://thebunniestore.com/ </li>
-          <li> Facebook: [Facebook BunnyStore]</li> 
-          <li> Instagram: [Instagram BunnyStore]</li> 
-          <li> Hotline: [Số điện thoại BunnyStore]</li> 
+          <li> Website:</li>
+          <li> 
+            <a target="_blank" href="https://www.facebook.com/bunnylylyyy">Facebook</a>
+          </li> 
+          <li> 
+            <a target="_blank" href="https://www.instagram.com/bunnyhouse.__/">Instagram</a>
+          </li> 
       </span>
     </div>
 
