--- a/src/resource/views/users/updateProfile.hbs
+++ b/src/resource/views/users/updateProfile.hbs
@@ -117,7 +117,7 @@
         Thông Tin Cá Nhân
       </p>
 
-      <form class="update-profile" method="POST" action="/profile/updated/{{user._id}}?_method=PUT">
+      <form class="update-profile" method="POST" action="/profile/updated/{{userInfo._id}}?_method=PUT">
         <div class="form-group">
           <label for="name">Tên Khách Hàng</label>
           <input 
@@ -215,7 +215,7 @@
             {{this.customerInfo.name}}
           </td>
           <td>
-            {{this.totalProductPrice}}
+            {{this.totalOrderPrice}} đ
           </td>
           <td>
             {{this.createdAt}}
@@ -224,7 +224,7 @@
             {{this.status}}
           </td>
           <td>
-            <a href="/order/{{this._id}}">Xem Chi Tiết</a>
+            <a href="/order/{{this._id}}">Chi Tiết</a>
           </td>
         </tr>
         {{/each}}
