--- a/src/public/css/signIn.css
+++ b/src/public/css/signIn.css
@@ -121,9 +121,17 @@
 @media screen and (max-width: 700px) {
   .sign-in-form {
     flex-direction: column;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    transform: none !important;
+    border: none !important;
+    box-shadow: none !important;
+
+    img { width: 100% !important;}
 
     .form-input {
-      width: 100%;
+      width: 100% !important;
       padding: 5px;
     }
   }
