--- a/src/public/css/signUp.css
+++ b/src/public/css/signUp.css
@@ -110,3 +110,22 @@
     }
   }
 }
+
+@media screen and (max-width: 700px) {
+  .sign-up-form {
+    flex-direction: column;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    transform: none !important;
+    border: none !important;
+    box-shadow: none !important;
+
+    img { width: 100% !important;}
+
+    .form-input {
+      width: 100% !important;
+      padding: 5px;
+    }
+  }
+}
