--- a/src/public/css/userHome.css
+++ b/src/public/css/userHome.css
@@ -137,3 +137,12 @@
 
   100% { transform: translateX(-50%) }
 }
+
+@media screen and (max-width: 700px) {
+  .flash-deal-board, .hot-products-board, .content-board, .famous-brand-board {
+    .title {
+      font-size: 25px !important;
+    }
+  }
+  
+}
