--- a/src/public/css/userOrdersChecking.css
+++ b/src/public/css/userOrdersChecking.css
@@ -50,6 +50,10 @@
       background-color:#F0F0F0;
       height: 50px;
 
+      td {
+        text-align: center;
+      }
+
       td:first-child {
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
@@ -61,10 +65,13 @@
       }
     }
 
-    /* tr:nth-child(even){background-color: #F0F0F0}
-    tr:nth-child(odd){background-color: white}
-    tr:hover {background-color: #D1A6A6;} */
-
     a { text-decoration: none; color: black;}
+  }
+}
+
+@media screen and (max-width: 700px) {
+  h1 {
+    font-size: 25px;
+    text-align: center;
   }
 }
