--- a/src/public/css/userUpdateProfile.css
+++ b/src/public/css/userUpdateProfile.css
@@ -156,3 +156,23 @@
     }
   }
 }
+
+@media screen and (max-width: 700px) {
+  .user-update-profile-container {
+    display: block;
+
+    .sidebar-menu {
+      width: 100% !important;
+    }
+
+    .content {
+      width: 100% !important;
+      padding: 0 0 10px 0 !important;
+      margin-top: 10px;
+
+      form {
+        grid-template-columns: auto;
+      }
+    }
+  }
+}
